trying_to_fix_bugs_2

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "botkit": "^0.6.19",
     "botkit-storage-mongo": "^1.0.7",
     "debug": "^2.6.0",
+    "dotenv": "^6.2.0",
     "express": "^4.14.0",
     "node-env-file": "^0.1.8",
     "request": "^2.79.0",
