--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^2.6.0",
     "dotenv": "^6.2.0",
     "express": "^4.14.0",
+    "mongoose": "^5.4.7",
     "node-env-file": "^0.1.8",
     "putty": "^1.0.1",
     "request": "^2.79.0",
