--- a/package.json
+++ b/package.json
@@ -4,22 +4,19 @@
   "description": "A starter kit for building a custom Facebook Messenger bot with Botkit Studio",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "test": "tape test/*.test.js | tap-spec"
   },
   "dependencies": {
     "bestbuy": "^2.1.3",
     "body-parser": "^1.15.2",
     "botkit": "^0.6.19",
-    "botkit-storage-mongo": "^1.0.7",
     "debug": "^2.6.0",
-    "dotenv": "^6.2.0",
     "express": "^4.14.0",
     "mongoose": "^5.4.7",
     "node-env-file": "^0.1.8",
-    "putty": "^1.0.1",
     "request": "^2.79.0",
-    "winston": "^3.1.0",
-    "wordfilter": "^0.2.6"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^5.12.1",
@@ -27,6 +24,9 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.2",
+    "tape-nock": "^1.6.1"
   }
 }
